--- a/insightcampus_api/assets/style.css
+++ b/insightcampus_api/assets/style.css
@@ -1,45 +1,59 @@
-﻿body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+﻿@font-face {
+    font-family: 'Nanum Gothic';
+    font-style: normal;
+    font-weight: normal;
+    src: url(NanumGothic-Regular.ttf) format('ttf');
+}
+
+body {
+    font-family: 'Nanum Gothic', sans-serif;
 }
 
 .header {
-    width: 2000px;
+    width: 800px;
     margin: 0 auto;
+    padding-top: 40px;
 }
 
     .header .title {
-        padding: 40px 0;
         text-align: center;
     }
 
         .header .title h1 {
-            font-size: 100px;
+            font-size: 30px;
         }
 
     .header .explane p {
-        margin: 20px 0;
-        font-size: 60px;
+        margin: 5px 0;
+        font-size: 22px;
     }
 
 .content {
-    width: 2000px;
+    width: 800px;
     margin: 0 auto;
 }
 
     .content h1 {
-        font-size: 70px;
+        font-size: 25px;
     }
 
     .content h5 {
-        font-size: 40px;
+        margin-top: 0px;
+        font-size: 20px;
         font-weight: 300;
+        margin-bottom: 50px;
+        float: right;
     }
 
     .content table {
         width: 100%;
         border-collapse: collapse;
-        font-size: 50px;
+        font-size: 20px;
         text-align: center;
+    }
+
+    .content table td {
+        border: 1px solid black;
     }
 
     .content table .price-line {
@@ -47,18 +61,18 @@
     }
 
 .caution {
-    margin: 50px 0;
-    font-size: 55px;
+    margin: 20px 0;
+    font-size: 20px;
 }
     .caution li {
-        padding: 20px;
+        padding: 10px;
     }
 
     .caution .account-number {
         margin-top: 0;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
         font-weight: bold;
-        font-size: 1.2em;
+        font-size: 20px;
         background-color: #ffff0b;
     }
 
