--- a/insightcampus_api/assets/edu_certification_style.css
+++ b/insightcampus_api/assets/edu_certification_style.css
@@ -1,47 +1,52 @@
 ﻿body {
-    background-image: url('../assets/test.png');
+    position: relative;
+    background-image: url('../assets/certification.png');
     background-repeat: no-repeat;
     padding-left: 100px;
     font-family: 'Nanum Gothic', sans-serif;
     font-weight: 900;
-}
-
-.number {
-    font-size: 16px;
+    color: #3b3b3b;
 }
 
 h1 {
-    font-size: 50px;
-    padding-left: 155px;
+    font-size: 60px;
+    letter-spacing: 5px;
 }
 
-li {
-    list-style: none;
+h2 {
     font-size: 18px;
-    padding-left: 20px;
 }
 
-p {
-    text-align: center;
-    font-size: 25px;
-    padding-right: 200px;
+h3 {
+    font-size: 16px;
 }
 
-.certification_date {
-    font-size: 18px;
-    padding-left: 200px;
+.user-name {
+    position: absolute;
+    top: 180px;
+    left: 50px;
 }
 
-.bottom {
-    padding-left: 150px;
-    padding-bottom: 300px;
+.class-name {
+    position: absolute;
+    top: 340px;
+    left: 170px;
 }
 
-.bottom_start {
-    font-size: 18px;
-    margin-right: 10px;
+.class-duration {
+    position: absolute;
+    top: 380px;
+    left: 170px;
 }
 
-.bottom_end {
-    font-size: 23px;
+.class-end-date {
+    position: absolute;
+    bottom: 140px;
+    left: 560px;
+}
+
+.certification-id {
+    position: absolute;
+    top: 32px;
+    right: 120px;
 }
